# hexon

./: .gitignore  .nvmrc  .prototools  CHANGELOG.md  README.md  jest.config.ts  moon.yml  nx.json  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
.changeset/: poor-toes-talk.md  twenty-moose-sip.md
.github/actions/: setup-toolchain.yaml
.github/actions/moon/: action.yaml
.github/actions/setup-toolchain/: action.yaml
.github/workflows/: publish.yml  release.yml  version.yml
.moon/: toolchain.yml  workspace.yml
src/: index.ts
src/aggregates/: entity.ts  index.ts
src/aggregates/generics/: get-props.ts  index.ts  to-primitives.ts
src/aggregates/specification/: criteria.ts  filter.ts  index.ts  specification.ts
src/common/: index.ts
src/common/decorators/: metadata-decorator.ts
src/common/generics/: index.ts
src/common/types/: index.ts
src/errors/: index.ts
src/errors/types/: error-params.type.ts  index.ts
src/value-objects/: index.ts  value-object-default-decorator.ts  value-object-factory.ts  value-object-type.ts  value-object.ts
src/value-objects/date/: date-errors.ts  date-validators.ts
src/value-objects/enum/: enum-errors.ts  enum-validators.ts  enum-value-object.ts
src/value-objects/id/: id-errors.ts  (+1 more)
tests/aggregates/: criteria.spec.ts  entity.spec.ts
tests/errors/: error.spec.ts  utils.ts
tests/value-objects/: date-value-object.spec.ts  enum-value-object.spec.ts  id.value-object.spec.ts  number-value-object.spec.ts  string.value-object.spec.ts
(+10 files in other folders)
